force-app/main/default/objects/EventOutboundConfig__mdt/EventOutboundConfig__mdt.object-meta.xml
<CustomObject>
    <description>Configuração de Saída</description>
    <label>Event Outbound Configuration</label>
    <pluralLabel>EventOutboundConfigs</pluralLabel>
</CustomObject>