force-app/main/default/objects/EventOutboundConfig__mdt/fields/CachePartitionName__c.field-meta.xml
<CustomField>
    <fullName>CachePartitionName__c</fullName>
    <inlineHelpText>All tokens are stored in Cache Partition</inlineHelpText>
    <label>Cache Partition Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>