force-app/main/default/objects/EventOutboundConfig__mdt/fields/EndPoint__c.field-meta.xml
<CustomField>
    <fullName>EndPoint__c</fullName>
    <description>End Point Url</description>
    <label>EndPoint</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>