force-app/main/default/objects/EventOutboundConfig__mdt/fields/ExternalCredendialAPIName__c.field-meta.xml
<CustomField>
    <fullName>ExternalCredendialAPIName__c</fullName>
    <label>External Credendial API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>