force-app/main/default/objects/EventOutboundConfig__mdt/fields/HttpHeaders__c.field-meta.xml
<CustomField>
    <fullName>HttpHeaders__c</fullName>
    <defaultValue>&apos;{&quot;Content-Type&quot; : &quot;application/json&quot;}&apos;</defaultValue>
    <description>Json que representa os headers padrões</description>
    <label>HttpHeaders</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>