force-app/main/default/objects/EventOutboundConfig__mdt/fields/NamedCredencial__c.field-meta.xml
<CustomField>
    <fullName>NamedCredencial__c</fullName>
    <description>Credencial Nomeada</description>
    <label>NamedCredencial</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>