force-app/main/default/objects/EventOutboundConfig__mdt/fields/OAuthClientIdCredentialVariable__c.field-meta.xml
<CustomField>
    <fullName>OAuthClientIdCredentialVariable__c</fullName>
    <inlineHelpText>Inform named Credential bind variable, exemple: {!$Credential.MyCredential.ClientId}</inlineHelpText>
    <label>OAuth ClientId Credential Variable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>