force-app/main/default/objects/EventOutboundConfig__mdt/fields/OAuthClientSecretCredentialVariable__c.field-meta.xml
<CustomField>
    <fullName>OAuthClientSecretCredentialVariable__c</fullName>
    <description>Inform named Credential bind variable, exemple: {!$Credential.MyCredential.ClientSecret}</description>
    <label>OAuth ClientSecret Credential Variable</label>
    <length>255</length>
    <type>Text</type>
</CustomField>