force-app/main/default/objects/EventOutboundConfig__mdt/fields/ResponseClassName__c.field-meta.xml
<CustomField>
    <fullName>ResponseClassName__c</fullName>
    <description>Response class name</description>
    <label>ResponseClassName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>