force-app/main/default/objects/EventOutboundConfig__mdt/fields/Timeout__c.field-meta.xml
<CustomField>
    <fullName>Timeout__c</fullName>
    <defaultValue>1200000</defaultValue>
    <description>Timeout padrão</description>
    <label>Timeout</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>