force-app/main/default/objects/EventOutboundConfig__mdt/fields/UseEnvironmentWithCredential__c.field-meta.xml
<CustomField>
    <fullName>UseEnvironmentWithCredential__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use environment to define Named Credential</description>
    <label>useEnvironmentWithCredential</label>
    <type>Checkbox</type>
</CustomField>